cloudformation-IAC/infrastructure-template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  CloudFormation Template to provision a secure and tagged Amazon EC2 instance 
  with optional key pair, security group, and IAM role.

Parameters:
  InstanceType:
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.medium
      - t2.small
      - t3.micro
      - t3.small
    Description: EC2 instance type

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access

  VPC:
    Type: AWS::EC2::VPC::Id
    Description: ID of an existing VPC

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID to launch the instance into

  AmiId:
    TType: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id
    Description: Latest Ubuntu 22.04 LTS AMI from SSM Parameter Store

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH only
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: k8s-hub-sg

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref AmiId
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: MyEC2Instance
        - Key: Owner
          Value: DevOps
        - Key: Environment
          Value: Dev
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          # Your custom app install goes here
          wget https://github.com/GhanshyamRamole/k8s-Hub-app/blob/main/depoy.sh
          chmod +x depoy.sh
          bash depoy.sh         

Outputs:
  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref EC2Instance

  PublicIP:
    Description: Public IP of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  AZ:
    Description: Availability Zone where EC2 instance is deployed
    Value: !GetAtt EC2Instance.AvailabilityZone
